# pw-agri

backend/: bd_inicio.sql  create_tables.py  insert_products.py  main.py  pyproject.toml  test_connection.py
backend/app/: database.py  models.py  routes.py  schemas.py
backend/app/modelo/: producto.py  usuario.py
backend/app/routes/: auth.py  productos.py  usuarios.py
backend/test/: test_db.py  test_psycopg2.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.js  _nav.js  routes.js
frontend/src/components/: PrivateRoute.js
frontend/src/components/header/: AppHeaderDropdown.js
frontend/src/helpers/: fetchData.js
frontend/src/views/dashboard/: Dashboard.js
frontend/src/views/pages/login/: Login.js
frontend/src/views/productos/: vistaProductos.js
